# Fasa_saliency

./: CMakeLists.txt  README.md
include/iCub/: FASA.h  Saliency_module.h
src/: FASA.cpp  Saliency_module.cpp  main.cpp
